# 300-earth-water-ai

./: .gitignore  CLAUDE.md  README.md  interactive.js  package.json  pyproject.toml
analysis/: leonidas-bug-analysis.md  ui-validation-analysis.md
bridge/: bridge_server.js  game_bridge.js  package.json
docs/: ARCHITECTURE.md
rules/300-earth-and-water/: play.js  rules.js
src/: __init__.py  base-player.js  game-runner.js  game_env.py  index.js  interactive-game.js  interactive-player.js  interactive_game.py  logger.js  player-factory.js  random-player.js  random_agent.py  state-capture.js
test/: 10-games-quick-test.js  README.md  uuid-error-capture-test.js  uuid-integration-test.js  uuid-logging-test.js  verify-uuid-files.js
test/fixtures/: game-states.js
test/integration/: full-game.test.js  movement.test.js  naval-movement.test.js
test/unit/: card-events.test.js  game-runner.test.js  integrated-state-capture.test.js  leonidas-battle.test.js  leonidas-bug.test.js  leonidas-detailed-example.test.js  leonidas-force-capture.test.js  leonidas-real-city-bug.test.js  leonidas-state-capture.test.js  logger.test.js  random-player.test.js
